<resources>
    <string name="app_name">PING MY FRIENDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_default_distance">Notify Friends Within</string>
    <string name="privacy_mode">Mode</string>
    <string name="public_setting">Public</string>
    <string name="private_setting">Private</string>
    <string name="save_settings">Save</string>
    <string name="notify_when_nearby">Notify when Nearby?</string>

    <string-array name="settingsMiles">
        <item>0.5 mi</item>
        <item>1.0 mi</item>
        <item>1.5 mi</item>
        <item>2.0 mi</item>
    </string-array>
</resources>
