<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/set_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/settingsUser"
            android:labelFor="@id/settingsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/choose_default_distance"
             />

        <Spinner
            android:id="@+id/settingsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:entries="@array/settingsMiles"
            android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_privacy"
            android:layout_below="@+id/set_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/settingsPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:layout_marginEnd="100dp"
                android:text="Privacy" />

            <Switch
                android:id="@+id/settingsMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/privacy_mode"
                android:textOff="@string/public_setting"
                android:textOn="@string/private_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_privacy"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
        <Button
            android:id="@+id/settingsSaveBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="100dp"
            android:text="@string/save_settings"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emergency" />
    </LinearLayout>
    </RelativeLayout>

</FrameLayout>